fix full width modal on tablet or smaller

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,9 @@ background: linear-gradient(156deg, rgba(41,109,175,1) 27%, rgba(0,212,255,1) 10
   width: 100%;
   color: white;
 }
+
+@media (min-width: 576px) {
+  .modal-dialog {
+    max-width: 100%;
+  }
+}
